# AOC2022

./: .gitignore  Cargo.toml
day1/: day1.py  day1.rs  day1.sh
day10/: day10.rs
day11/: day11.py  test.py
day12/: day12.py
day13/: day13.py
day2/: day2part1.py  day2part1.rs  day2part2.py  day2part2.rs
day3/: day3part1.py  day3part1.rs  day3part2.py  day3part2.rs
day4/: day4.rs
day5/: day5part1.rs  day5part2.rs
day6/: day6part1.rs  day6part2.rs
day7/: day7part1.rs  day7part2.rs
day8/: day8part1.rs  day8part2.rs
day9/: day9part1.rs
