[package]
name = "AOC2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day1exe"
path = "day1/day1.rs"

[[bin]]
name = "day2part1"
path = "day2/day2part1.rs"

[[bin]]
name = "day2part2"
path = "day2/day2part2.rs"

[[bin]]
name = "day3part1"
path = "day3/day3part1.rs"

[[bin]]
name = "day3part2"
path = "day3/day3part2.rs"

[[bin]]
name = "day4"
path = "day4/day4.rs"